--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "main": "app/index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --es-module-specifier-resolution=node -I --watch app",
-    "test": "jest"
+    "test": "jest && cucumber-js"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
+    "@cucumber/cucumber": "^8.5.1",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-xo": "^0.41.0",
     "eslint-plugin-jest": "^26.7.0",
+    "expect": "^28.1.3",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
