--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "main": "app/index.js",
   "type": "module",
   "scripts": {
-    "test": "jest && cucumber-js"
+    "test": "jest && cucumber-js -f @cucumber/pretty-formatter"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@cucumber/cucumber": "^8.5.1",
+    "@cucumber/messages": "^19.1.2",
+    "@cucumber/pretty-formatter": "^1.0.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-xo": "^0.41.0",
